# go/as/external/api/application.pb.gw.go
@@ -2562,8 +2562,8 @@ func local_request_ApplicationService_ListIntegrations_0(ctx context.Context, ma
 
 }
 
-func request_ApplicationService_CreateMQTTIntegrationCertificate_0(ctx context.Context, marshaler runtime.Marshaler, client ApplicationServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CreateMQTTIntegrationCertificateRequest
+func request_ApplicationService_GenerateMQTTIntegrationCertificate_0(ctx context.Context, marshaler runtime.Marshaler, client ApplicationServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GenerateMQTTIntegrationCertificateRequest
 	var metadata runtime.ServerMetadata
 
 	var (
@@ -2584,13 +2584,13 @@ func request_ApplicationService_CreateMQTTIntegrationCertificate_0(ctx context.C
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "application_id", err)
 	}
 
-	msg, err := client.CreateMQTTIntegrationCertificate(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.GenerateMQTTIntegrationCertificate(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_ApplicationService_CreateMQTTIntegrationCertificate_0(ctx context.Context, marshaler runtime.Marshaler, server ApplicationServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq CreateMQTTIntegrationCertificateRequest
+func local_request_ApplicationService_GenerateMQTTIntegrationCertificate_0(ctx context.Context, marshaler runtime.Marshaler, server ApplicationServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GenerateMQTTIntegrationCertificateRequest
 	var metadata runtime.ServerMetadata
 
 	var (
@@ -2611,7 +2611,7 @@ func local_request_ApplicationService_CreateMQTTIntegrationCertificate_0(ctx con
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "application_id", err)
 	}
 
-	msg, err := server.CreateMQTTIntegrationCertificate(ctx, &protoReq)
+	msg, err := server.GenerateMQTTIntegrationCertificate(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -3461,7 +3461,7 @@ func RegisterApplicationServiceHandlerServer(ctx context.Context, mux *runtime.S
 
 	})
 
-	mux.Handle("POST", pattern_ApplicationService_CreateMQTTIntegrationCertificate_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_ApplicationService_GenerateMQTTIntegrationCertificate_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
@@ -3470,14 +3470,14 @@ func RegisterApplicationServiceHandlerServer(ctx context.Context, mux *runtime.S
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_ApplicationService_CreateMQTTIntegrationCertificate_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_ApplicationService_GenerateMQTTIntegrationCertificate_0(rctx, inboundMarshaler, server, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_ApplicationService_CreateMQTTIntegrationCertificate_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_ApplicationService_GenerateMQTTIntegrationCertificate_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -4362,7 +4362,7 @@ func RegisterApplicationServiceHandlerClient(ctx context.Context, mux *runtime.S
 
 	})
 
-	mux.Handle("POST", pattern_ApplicationService_CreateMQTTIntegrationCertificate_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_ApplicationService_GenerateMQTTIntegrationCertificate_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
@@ -4371,14 +4371,14 @@ func RegisterApplicationServiceHandlerClient(ctx context.Context, mux *runtime.S
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_ApplicationService_CreateMQTTIntegrationCertificate_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_ApplicationService_GenerateMQTTIntegrationCertificate_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_ApplicationService_CreateMQTTIntegrationCertificate_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_ApplicationService_GenerateMQTTIntegrationCertificate_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -4470,7 +4470,7 @@ var (
 
 	pattern_ApplicationService_ListIntegrations_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"api", "applications", "application_id", "integrations"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_ApplicationService_CreateMQTTIntegrationCertificate_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 2, 4, 2, 5}, []string{"api", "applications", "application_id", "integrations", "mqtt", "certificate"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_ApplicationService_GenerateMQTTIntegrationCertificate_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 2, 4, 2, 5}, []string{"api", "applications", "application_id", "integrations", "mqtt", "certificate"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -4558,5 +4558,5 @@ var (
 
 	forward_ApplicationService_ListIntegrations_0 = runtime.ForwardResponseMessage
 
-	forward_ApplicationService_CreateMQTTIntegrationCertificate_0 = runtime.ForwardResponseMessage
+	forward_ApplicationService_GenerateMQTTIntegrationCertificate_0 = runtime.ForwardResponseMessage
 )
